@@ -1,4 +1,5 @@
 1.13 -> 1.14:
+    - jbj: add POPT_next_char(), backout POPT_fprintf() usage (for the moment).
     - jbj: finish POPT_ARG_ARGV implementation.
     - jbj: free aliases/execs with common code.
     - jbj: rewrite the callback logic using a switch for simplicity.
